# CARVER_WS

./: .gitignore  .gitmodules  BeamOdriveConfig.json  README.md  lidar_params.yaml  pointcloundtolaser_params.yaml
firmware/.metadata/: .log4j2.xml  version.ini
firmware/.metadata/.plugins/org.eclipse.cdt.core/: AMT212E-V_Micro-ROS_UART.language.settings.xml  Carver_Interface.language.settings.xml  IMU_Interface_CM4.language.settings.xml  IMU_Interface_CM7.language.settings.xml  carver_interface_CM4.language.settings.xml  carver_interface_CM7.language.settings.xml
firmware/.metadata/.plugins/org.eclipse.core.resources/: 0.snap  7.snap
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/AMT212E-V_Micro-ROS_UART/: .location  .markers.snap
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/AMT212E-V_Micro-ROS_UART/.indexes/: properties.index
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/Carver_Interface/: .location  .markers.snap
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/Carver_Interface/.indexes/: properties.index
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/IMU_Interface/: .location  .markers  .markers.snap
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/IMU_Interface_CM4/: .location  .markers  .markers.snap
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/IMU_Interface_CM4/.indexes/: properties.index
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/IMU_Interface_CM7/: .location  .markers  .markers.snap
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/IMU_Interface_CM7/.indexes/: history.index  properties.index
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/carver_insterface/: .location  .markers.snap
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/carver_insterface_CM4/: .location  .markers.snap
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/carver_insterface_CM4/.indexes/: properties.index
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/carver_insterface_CM7/: .location  .markers.snap
firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/carver_insterface_CM7/.indexes/: properties.index
firmware/.metadata/.plugins/org.eclipse.core.resources/.root/: 7.tree
firmware/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
firmware/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
firmware/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
firmware/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
firmware/.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
firmware/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
firmware/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
firmware/H745/.metadata/: .log4j2.xml  version.ini
firmware/H745/.metadata/.plugins/org.eclipse.core.resources/.projects/carver_insterface_CM4/: .markers
firmware/H745/.metadata/.plugins/org.eclipse.core.resources/.projects/carver_insterface_CM4/.indexes/: properties.index
firmware/H745/.metadata/.plugins/org.eclipse.core.resources/.projects/carver_insterface_CM7/: .markers
firmware/H745/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
firmware/H745/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
firmware/H745/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
firmware/H745/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
firmware/H745/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
firmware/H745/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
src/steering_controllers_library/: CMakeLists.txt  package.xml
src/steering_controllers_library/src/: odom_node.cpp
(+7 files in other folders)
